[package]
name = "decis"
version = "0.1.0"
authors = ["Luke K Schubert <lkschubert8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.116"
serde_cbor = "0.10"